# intel_8080

./: .gitignore  Cargo.toml  README.md
scripts/: generate_disassembler.py  generate_op_funcs.py  opcodes.html
src/: cpu.rs  main.rs
src/disassembler/: mod.rs
