# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "intel_8080"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intel_8080"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
ctrlc = "3.2.2"